# APIZap

./: LICENSE  MANIFEST.in  README.md  demo.py  demo_results.json  demo_results_swagger_petstore.json  petstore_results.json  pyproject.toml  requirements.txt  setup.py
apizap/: __init__.py  cli.py  parser.py  reporter.py  tester.py
apizap.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
examples/: basic_usage.py
tests/: __init__.py  test_parser.py
